--- a/style/base.css
+++ b/style/base.css
@@ -41,6 +41,17 @@ body
 	background-position:0px 0px;	
 }
 
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
 body.background-grid		{ background-image:url('../image/background/grid.png');			}
 body.background-mesh		{ background-image:url('../image/background/mesh.png');			}
 body.background-wood		{ background-image:url('../image/background/wood.png');			}
